--- a/template/debug.twig
+++ b/template/debug.twig
@@ -4,6 +4,8 @@
 {% set guidePinning = false %}
 {% set appbarHidden = false %}
 {% set spfEnabled = true %}
+{% set pageType = "debug" %}
+{% set pageId = "debug" %}
 
 {%- block title -%} 
 Debug - {{ parent() }}
